[metadata]
name = pysol_cards
summary = Deal PySol FC Cards
description_file =
    README.rst
author = Shlomi Fish
author_email = shlomif@cpan.org
home_page = https://fc-solve.shlomifish.org/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    pysol_cards

[compile_catalog]
directory = pysol_cards/locale
domain = pysol_cards

[update_catalog]
domain = pysol_cards
output_dir = pysol_cards/locale
input_file = pysol_cards/locale/pysol_cards.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = pysol_cards/locale/pysol_cards.pot
